--- a/CSS/index.css
+++ b/CSS/index.css
@@ -400,6 +400,7 @@ body {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
@@ -527,7 +528,6 @@ body {
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
-    margin: 50px auto;
     position: fixed;
     top: 50%;
     left: 50%;
