--- a/CSS/admin.css
+++ b/CSS/admin.css
@@ -53,6 +53,7 @@ body {
 
 .menu-item:hover {
    background-color: #222;
+   transition: 0.3s;
 }
 
 .content {
@@ -61,7 +62,7 @@ body {
    padding: 20px;
 }
 
-.header {
+/* .header {
    background-color: #000;
    color: white;
    padding: 15px 20px;
@@ -71,7 +72,8 @@ body {
    margin-left: -20px;
    margin-top: -20px;
    width: calc(100% + 40px);
-}
+  
+} */
 
 .dashboard {
    background-color: white;
