--- a/CSS/giohang.css
+++ b/CSS/giohang.css
@@ -83,6 +83,7 @@
 }
 
 .remove-item {
+    font-size: 15px;
     background-color: #ff4d4d;
     color: white;
     border: none;
@@ -102,12 +103,14 @@
 }
 
 .update-cart {
-    background-color: white;
-    color: white;
-    font-size: 2px;
+    font-size: 14px;
+    background-color: #282ea7;
     border: none;
+    color: white;
     padding: 10px 20px;
+    text-decoration: none;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 
